# CHRIS

./: .env.example  .gitignore  Dockerfile  README.md  chris-realm-export.json  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
chris/: main.py
chris-frontend/: Dockerfile  components.json  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json
chris-frontend/src/: App.css  App.tsx  main.tsx
chris-frontend/src/components/: ArrowIcon.tsx  LoginButton.tsx  LogoutButton.tsx
chris-frontend/src/components/staff/: AdminTeamManagement.tsx  EditableCell.tsx  SearchAndTabs.tsx  StaffAvatar.tsx  StaffHeader.tsx  TeamCard.tsx  TeamsGrid.tsx  UserRow.tsx  UsersTable.tsx  types.ts
chris-frontend/src/components/ui/: alert-dialog.tsx  sonner.tsx  table.tsx
chris-frontend/src/contexts/: AuthContext.tsx
chris-frontend/src/pages/: Layout.tsx  Login.tsx  ProtectedRoute.tsx  Staff.tsx  StaffRoute.tsx  UserProfile.tsx  UserSettings.tsx
chris-frontend/src/schemas/: adminUserUpdateSchema.ts  teamSchemas.ts  userUpdateSchema.ts
chris-frontend/src/services/: api.ts
chris/api/: router.py
chris/api/controllers/: auth.py
chris/api/endpoints/: auth.py  discord.py  staff.py  teams.py  users.py
chris/auth/: schemas.py  services.py
chris/core/: config.py
chris/database/: db.py
chris/models/: team.py  user.py
chris/schemas/: team.py  user.py
chris/services/: user.py
chris/services/discord/: __init__.py  client.py  request.py
chris/types/: __init__.py  common.py
chris/utils/: security.py
(+9 files in other folders)
